Fixed issue with section div wrapping.

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -27,26 +27,28 @@ html {
     }
 }
 
-/* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
-The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children 
-of those sections to manage the look and feel of the site. */
+/* Custom divs. */
 
 .intro-section {
-    height: 100%;
+    overflow:hidden;
+    position:relative;
+    min-height: 100%;
     padding-top: 150px;
     text-align: center;
     background: #fff;
 }
 
 .odd-section {
-    height: 100%;    
+    overflow:hidden;
+    min-height: 100%;
     padding-top: 50px;
     text-align: center;
     background: #eee;
 }
 
 .even-section {
-    height: 100%;
+    overflow:hidden;
+    min-height: 100%;
     padding-top: 150px;
     text-align: center;
     background: #fff;
